--- a/Go-K8s/deploy/deploy-consumer.yaml
+++ b/Go-K8s/deploy/deploy-consumer.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: ibmmq-consumer
-          image: kazada/sample-app:latest
+          image: mqkeda/sample-app:latest
           imagePullPolicy: Always
           command:
             - "/src/receive"
