--- a/Go-K8s/deploy/deploy-publisher.yaml
+++ b/Go-K8s/deploy/deploy-publisher.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: ibmmq-client
-          image: kazada/sample-app:latest
+          image: mqkeda/sample-app:latest
           imagePullPolicy: Always
           command:
             - "/src/send"
