Add QueueManager parameter to trigger

--- a/Go-K8s/deploy/deploy-consumer.yaml
+++ b/Go-K8s/deploy/deploy-consumer.yaml
@@ -78,6 +78,7 @@ spec:
       metadata:
         queueDepth: '5' # Queue length target for HPA. Default: 5 messages
         host: 'https://web-qm1-6d0c.qm2.eu-gb.mq.appdomain.cloud/ibmmq/rest/v2/admin/action/qmgr/QM1/mqsc' # Your admin REST endpoint
+        queueManager: 'QM1' # Your queue manager
         queueName: 'DEMO.QUEUE' # Your queue name
         tlsDisabled: 'false' # Set 'true' to disable TLS. Default: false
       authenticationRef:
