--- a/JMS/pom.xml
+++ b/JMS/pom.xml
@@ -28,6 +28,7 @@
         <groupId>com.ibm.mq</groupId>
         <artifactId>com.ibm.mq.allclient</artifactId>
         <version>9.2.0.0</version>
+        <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>com.googlecode.json-simple</groupId>
@@ -78,7 +79,38 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.ibm.mq.samples.jms.JmsPut</mainClass>
+                </transformer>
+              </transformers>
+              <artifactSet>
+                <excludes>
+                  <exclude>com.ibm.mq:com.ibm.mq.allclient</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
+
+      </plugin>
+    </plugins>
+
   </build>
 </project>
