Make the creation of an ObjectMessage optional

--- a/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
+++ b/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.qpid-jms.password=passw0rd
 # delay, persist, custom, high, low, object
 # Valid mode options for get are queue, topic, sync, async, selector
 # Valid mode options for browse are queue, topic
-amqp-mqtest.appargs = put,hire,persist
+amqp-mqtest.appargs = put,high,persist
 
 amqp-mqtest.queuename = prices
 amqp-mqtest.topicname = dev/
