--- a/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
+++ b/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
@@ -8,9 +8,9 @@ quarkus.qpid-jms.password=passw0rd
 
 # Valid mode values are put, get, browse
 # Valid mode options for put are queue, topic, reply, expire
-# delay, persist, custom, high, low, object, bytes
+# delay, persist, custom, high, low, object, bytes, ack
 # Valid mode options for get are queue, topic, sync, async, selector
-# Valid mode options for browse are queue, topic
+# Valid mode options for browse are queue, topic, durable, ack
 amqp-mqtest.appargs = put,high,persist
 
 amqp-mqtest.queuename = prices
