Add transaction as a put mode option

--- a/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
+++ b/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.qpid-jms.password=passw0rd
 
 # Valid mode values are put, get, browse
 # Valid mode options for put are queue, topic, reply, expire
-# delay, persist, custom, high, low, object, bytes, ack
+# delay, persist, custom, high, low, object, bytes, ack, transaction
 # Valid mode options for get are queue, topic, sync, async, selector
 # Valid mode options for browse are queue, topic, durable, ack
 amqp-mqtest.appargs = put,high,persist
