--- a/transactions/JMS/Spring/simple/src/main/resources/application.properties
+++ b/transactions/JMS/Spring/simple/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 ibm.mq.queueManager=QM1
-ibm.mq.channel=DEV.APP.SVRCONN
+ibm.mq.channel=SYSTEM.DEF.SVRCONN
 ibm.mq.connName=localhost(1414)
-ibm.mq.tempModel=DEV.APP.MODEL.QUEUE
 
 # Change the following lines as necessary. Set the ibm.mq.user
 # property to an empty string to send no authentication request.
