default queue to out of the box values

--- a/amqp-qpid/qpid-standard/src/main/resources/jndi.properties
+++ b/amqp-qpid/qpid-standard/src/main/resources/jndi.properties
@@ -9,9 +9,11 @@ connectionfactory.myFactoryLookup = amqp://localhost:5672
 # Configure the necessary Queue and Topic objects
 # queue.<JNDI-lookup-name> = <queue-name>
 # topic.<JNDI-lookup-name> = <topic-name>
-queue.myQueueLookup = prices
+# queue.myQueueLookup = prices
+queue.myQueueLookup = DEV.QUEUE.1
 topic.myTopicLookup = dev/
 # queue.myReplyQueueLookup = replies
+# queue.myReplyQueueLookup = DEV.QUEUE.2
 
 jms.username = app
 jms.password = passw0rd
