--- a/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
+++ b/amqp-qpid/qpid-quarkus/src/main/resources/application.properties
@@ -13,6 +13,8 @@ quarkus.qpid-jms.password=passw0rd
 # Valid mode options for browse are queue, topic, durable, ack
 amqp-mqtest.appargs = put,high,persist
 
-amqp-mqtest.queuename = prices
+# amqp-mqtest.queuename = prices
+amqp-mqtest.queuename = DEV.QUEUE.1
 amqp-mqtest.topicname = dev/
 # amqp-mqtest.replyqueuename = replies
+# amqp-mqtest.replyqueuename = DEV.QUEUE.2
