--- a/Spring-JMS/pom.xml
+++ b/Spring-JMS/pom.xml
@@ -27,10 +27,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>mq-spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>mq-spring</name>
+	<description>MQ samples project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
