--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -1,3 +1,59 @@
-spring.main.web-application-type=none
+# (c) Copyright IBM Corporation 2021
+
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+
+# http://www.apache.org/licenses/LICENSE-2.0
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+#
+# All lines starting with a # are comments, or are settings that have been disabled.
+#
+
+# Ensure that no web components are started
+spring.main.web-application-type=none 
+
+# Set to true to enable pub/sub by default
+#spring.jms.pub-sub-domain=true
+
+# MQ Connection settings
+ibm.mq.queueManager=QM1  
+ibm.mq.channel=DEV.APP.SVRCONN
+ibm.mq.connName=localhost(1414)
+
+# Change the following lines as necessary. Set the ibm.mq.user
+# property to an empty string to send no authentication request.
+ibm.mq.user=app
+ibm.mq.password=passw0rd
+
+# Application properties
+app.queue.name1=DEV.QUEUE.1
+app.queue.name2=DEV.QUEUE.2
+app.topic.name1=dev/
+app.topic.name2=notes/
+
+# Level 101 properties
+# When running in put/get mode
+app.l101.dest.name1=${app.queue.name1}
+app.l101.dest.name2=${app.queue.name2}
+# When running in pub/sub mode
+#app.l101.dest.name1=${app.topic.name1}
+#app.l101.dest.name2=${app.topic.name2}
+
+
+
+
+
+
 
 
