Add Level 102 samples

--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -50,6 +50,11 @@ app.l101.dest.name2=${app.queue.name2}
 #app.l101.dest.name1=${app.topic.name1}
 #app.l101.dest.name2=${app.topic.name2}
 
+# Level 102 properties
+app.l102.queue.name1=${app.queue.name1}
+app.l102.queue.name2=${app.queue.name2}
+app.l102.topic.name1=${app.topic.name1}
+app.l102.topic.name2=${app.topic.name2}
 
 
 
