--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -56,7 +56,9 @@ app.l102.queue.name2=${app.queue.name2}
 app.l102.topic.name1=${app.topic.name1}
 app.l102.topic.name2=${app.topic.name2}
 
-
+# Level 103 properties
+app.l103.queue.name1=${app.queue.name1}
+app.l103.queue.name2=${app.queue.name2}
 
 
 
