--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -60,7 +60,9 @@ app.l102.topic.name2=${app.topic.name2}
 app.l103.queue.name1=${app.queue.name1}
 app.l103.queue.name2=${app.queue.name2}
 
-
+# Level 104 properties
+app.l104.queue.name1=${app.queue.name1}
+app.l104.queue.name2=${app.queue.name2}
 
 
 
