--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -67,5 +67,8 @@ app.l104.queue.name2=${app.queue.name1}
 # Level 105 properties
 app.l105.queue.name2=${app.queue.name1}
 
+# Level 106 properties
+app.l106.queue.name1=${app.queue.name1}
+app.l106.queue.name2=${app.queue.name2}
 
 
