--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -31,6 +31,9 @@ ibm.mq.queueManager=QM1
 ibm.mq.channel=DEV.APP.SVRCONN
 ibm.mq.connName=localhost(1414)
 
+# MQ Model queue to use for temporary queues.
+ibm.mq.tempModel=DEV.APP.MODEL.QUEUE
+
 # Change the following lines as necessary. Set the ibm.mq.user
 # property to an empty string to send no authentication request.
 ibm.mq.user=app
@@ -39,8 +42,10 @@ ibm.mq.password=passw0rd
 # Application properties
 app.queue.name1=DEV.QUEUE.1
 app.queue.name2=DEV.QUEUE.2
+app.queue.name3=DEV.QUEUE.3
 app.topic.name1=dev/
 app.topic.name2=notes/
+
 
 # Level 101 properties
 # When running in put/get mode
@@ -70,5 +75,11 @@ app.l105.queue.name2=${app.queue.name1}
 # Level 106 properties
 app.l106.queue.name1=${app.queue.name1}
 app.l106.queue.name2=${app.queue.name2}
+
+# Level 107 properties
+app.l107.queue.name1=${app.queue.name1}
+app.l107.queue.name2=${app.queue.name3}
+
+
 
 
