--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -80,6 +80,8 @@ app.l106.queue.name2=${app.queue.name2}
 app.l107.queue.name1=${app.queue.name1}
 app.l107.queue.name2=${app.queue.name3}
 
+# Level 108 properties
+app.l108.queue.name2=${app.queue.name2}
 
 
 
