--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -83,5 +83,9 @@ app.l107.queue.name2=${app.queue.name3}
 # Level 108 properties
 app.l108.queue.name2=${app.queue.name2}
 
+# Level 109 properties
+app.l109.queue.name2=${app.queue.name2}
+app.l109.queue.name3=${app.queue.name3}
+
 
 
