--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -85,7 +85,8 @@ app.l108.queue.name2=${app.queue.name2}
 
 # Level 109 properties
 app.l109.queue.name2=${app.queue.name2}
-app.l109.queue.name3=${app.queue.name3}
 
-
+# Level 110 properties
+app.l110.queue.name2=${app.queue.name2}
+app.l110.queue.name3=${app.queue.name3}
 
