--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -34,6 +34,10 @@ ibm.mq.connName=localhost(1414)
 # MQ Model queue to use for temporary queues.
 ibm.mq.tempModel=DEV.APP.MODEL.QUEUE
 
+# Pooling options
+#ibm.mq.pool.enabled=true
+#ibm.mq.pool.maxConnections=5
+
 # Change the following lines as necessary. Set the ibm.mq.user
 # property to an empty string to send no authentication request.
 ibm.mq.user=app
@@ -89,4 +93,8 @@ app.l109.queue.name2=${app.queue.name2}
 # Level 110 properties
 app.l110.queue.name2=${app.queue.name2}
 app.l110.queue.name3=${app.queue.name3}
+
+# Level 111 properties
+app.l111.queue.name2=${app.queue.name2}
+
 
