--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.main.web-application-type=none
 # Set to true to enable pub/sub by default
 #spring.jms.pub-sub-domain=true
 
+# Set to prevent listener containers automatically starting on startup.
+#spring.jms.listener.auto-startup=false
+
 # MQ Connection settings
 ibm.mq.queueManager=QM1  
 ibm.mq.channel=DEV.APP.SVRCONN
@@ -96,5 +99,8 @@ app.l110.queue.name3=${app.queue.name3}
 
 # Level 111 properties
 app.l111.queue.name2=${app.queue.name2}
+
+# Level 112 properties
+app.l112.queue.name2=${app.queue.name2}
 
 
