--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -103,4 +103,6 @@ app.l111.queue.name2=${app.queue.name2}
 # Level 112 properties
 app.l112.queue.name2=${app.queue.name2}
 
+# Level 113 properties
+app.l113.queue.name2=${app.queue.name2}
 
