--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -106,3 +106,7 @@ app.l112.queue.name2=${app.queue.name2}
 # Level 113 properties
 app.l113.queue.name2=${app.queue.name2}
 
+# Level 114 properties
+app.l114.queue.name1=${app.queue.name1}
+app.l114.queue.name2=${app.queue.name2}
+
