--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -110,3 +110,6 @@ app.l113.queue.name2=${app.queue.name2}
 app.l114.queue.name1=${app.queue.name1}
 app.l114.queue.name2=${app.queue.name2}
 
+# Level 201 properties
+app.l201.queue.name1=${app.queue.name1}
+app.l201.queue.name2=${app.queue.name2}
