--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -113,3 +113,7 @@ app.l114.queue.name2=${app.queue.name2}
 # Level 201 properties
 app.l201.queue.name1=${app.queue.name1}
 app.l201.queue.name2=${app.queue.name2}
+
+# Level 202 properties
+app.l202.queue.name1=${app.queue.name1}
+app.l202.queue.name3=${app.queue.name3}
