--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -117,3 +117,6 @@ app.l201.queue.name2=${app.queue.name2}
 # Level 202 properties
 app.l202.queue.name1=${app.queue.name1}
 app.l202.queue.name3=${app.queue.name3}
+
+# Level 203 properties
+app.l203.topic.name2=${app.topic.name1}
