--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -120,3 +120,6 @@ app.l202.queue.name3=${app.queue.name3}
 
 # Level 203 properties
 app.l203.topic.name2=${app.topic.name1}
+
+# Level 204 properties
+app.l204.queue.name1=${app.queue.name1}
