--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -53,6 +53,12 @@ app.queue.name3=DEV.QUEUE.3
 app.topic.name1=dev/
 app.topic.name2=notes/
 
+# Application properties when using Admin credentials and channel
+my.app.admin.channel=DEV.ADMIN.SVRCONN
+my.app.admin.host=localhost
+my.app.admin.port=1414
+my.app.admin.user=admin
+my.app.admin.password=passw0rd
 
 # Level 101 properties
 # When running in put/get mode
@@ -110,6 +116,9 @@ app.l113.queue.name2=${app.queue.name2}
 app.l114.queue.name1=${app.queue.name1}
 app.l114.queue.name2=${app.queue.name2}
 
+# Level 115 properties
+app.l115.queue.name1=${app.queue.name1}
+
 # Level 201 properties
 app.l201.queue.name1=${app.queue.name1}
 app.l201.queue.name2=${app.queue.name2}
@@ -122,4 +131,4 @@ app.l202.queue.name3=${app.queue.name3}
 app.l203.topic.name2=${app.topic.name1}
 
 # Level 204 properties
-app.l204.queue.name1=${app.queue.name1}
+app.l204.queue.name1=${app.queue.name2}
