--- a/serverless/codeengine/clientapp/package.json
+++ b/serverless/codeengine/clientapp/package.json
@@ -18,8 +18,7 @@
     "pug": "^3.0.2",
     "morgan": "~1.9.1",
     "http-errors": "~1.8.0",
-    "cookie-parser": "~1.4.4",
-    "axios": "^0.21.1"
+    "cookie-parser": "~1.4.4"
   },
 
   "scripts": {
