--- a/JMS/pom.xml
+++ b/JMS/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  (c) Copyright IBM Corporation 2020
+  (c) Copyright IBM Corporation 2020, 2022
 
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
@@ -43,7 +43,7 @@
     <dependency>
         <groupId>com.ibm.mq</groupId>
         <artifactId>com.ibm.mq.allclient</artifactId>
-        <version>9.2.0.1</version>
+        <version>9.2.5.0</version>
     </dependency>
     <dependency>
         <groupId>com.googlecode.json-simple</groupId>
