--- a/Node.js/.env
+++ b/Node.js/.env
@@ -2,11 +2,11 @@ QMGR=QM1
 QUEUE_NAME=DEV.QUEUE.1
 MODEL_QUEUE_NAME=DEV.APP.MODEL.QUEUE
 DYNAMIC_QUEUE_PREFIX=APP.REPLIES.*
-HOST=localhost
-PORT=1414
-CHANNEL=DEV.APP.SVRCONN
+HOST=qm1-994b.qm.eu-gb.mq.appdomain.cloud
+PORT=32431
+CHANNEL=CLOUD.APP.SVRCONN
 TOPIC_NAME=dev/
 APP_USER=app
 APP_PASSWORD=passw0rd
-xKEY_REPOSITORY=./keys/clientkey
-xCIPHER=TLS_RSA_WITH_AES_128_CBC_SHA256
+xKEY_REPOSITORY=~/mq-dev-patterns/Node.js/clientTruststore.p12
+xCIPHER=ANY_TLS12_OR_HIGHER
