--- a/amqp-qpid/qpid-standard/src/main/resources/jndi.properties
+++ b/amqp-qpid/qpid-standard/src/main/resources/jndi.properties
@@ -4,7 +4,7 @@ java.naming.factory.initial = org.apache.qpid.jms.jndi.JmsInitialContextFactory
 
 # Define the required ConnectionFactory instances
 # connectionfactory.<JNDI-lookup-name> = <URI>
-connectionfactory.myFactoryLookup = amqp://localhost:5672
+connectionfactory.myFactoryLookup = amqp://localhost:5672?jms.username=app&jms.password=passw0rd
 
 # Configure the necessary Queue and Topic objects
 # queue.<JNDI-lookup-name> = <queue-name>
@@ -15,5 +15,5 @@ topic.myTopicLookup = dev/
 # queue.myReplyQueueLookup = replies
 # queue.myReplyQueueLookup = DEV.QUEUE.2
 
-jms.username = app
-jms.password = passw0rd
+#jms.username = app
+#jms.password = passw0rd
