Enforce rules to ensure App and Admin passwords have been set

--- a/container/queuemanager/compose/.env
+++ b/container/queuemanager/compose/.env
@@ -1,2 +1,3 @@
-APP_PASSWORD=YourSecret2AppPassword
-ADMIN_PASSWORD=YourSecret8AdminPassword
+# Uncomment the lines below and set your passwords
+# APP_PASSWORD=
+# ADMIN_PASSWORD=
