--- a/ibm-messaging-mq-cloud-showcase-app/aws-docker-compose.yaml
+++ b/ibm-messaging-mq-cloud-showcase-app/aws-docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       - app-pubic-network  
     environment:   
       - REACT_APP_BE_HOST=be     
+      - REACT_APP_IS_FOR_CODING_CHALLENGE=false
     depends_on:
       - be
     labels:
