--- a/ibm-messaging-mq-cloud-showcase-app/.env
+++ b/ibm-messaging-mq-cloud-showcase-app/.env
@@ -1,4 +1,5 @@
 APP_PASSWORD=
 ADMIN_PASSWORD=
-IMAGE_ECS_REGISTRY_URI=
-CLUSTER_NAME=
+IMAGE_ECS_REGISTRY_URI=image_ecs
+CLUSTER_NAME=cluster_name
+
