closing connections on GET (no toggle)

--- a/ibm-messaging-mq-cloud-showcase-app/.env
+++ b/ibm-messaging-mq-cloud-showcase-app/.env
@@ -1,5 +1,5 @@
-APP_PASSWORD=
-ADMIN_PASSWORD=
+APP_PASSWORD=yourAppPassword
+ADMIN_PASSWORD=yourAdminPassword
 IMAGE_ECS_REGISTRY_URI=image_ecs
 CLUSTER_NAME=cluster_name
 
