switch on debugging

--- a/ibm-messaging-mq-cloud-showcase-app/backend/AWS-showcase-backend/package.json
+++ b/ibm-messaging-mq-cloud-showcase-app/backend/AWS-showcase-backend/package.json
@@ -21,7 +21,7 @@
     "uuid": "9.0.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "DEBUG=mqapp* node server.js",
     "debug": "DEBUG=mqapp* node server.js"
   },
   "engines": {
