--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# (c) Copyright IBM Corporation 2024
+# (c) Copyright IBM Corporation 2021, 2024
 
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
