--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -63,10 +63,10 @@ my.app.admin.channel=DEV.ADMIN.SVRCONN
 my.app.admin.host=localhost
 my.app.admin.port=1414
 my.app.admin.user=admin
+my.app.admin.password=passw0rd
 #Uncomment the below lines when connecting to MQ on Cloud
 #my.app.admin.sslCipherSpec=*TLS12ORHIGHER
 #my.app.admin.clientTruststore=classpath:keystore/yourClientTrustStoreName.p12
-#my.app.admin.password=yourMQAdminPassword
 
 # Level 101 properties
 # When running in put/get mode
