Made the required changes

--- a/Spring-JMS/src/main/resources/application.properties
+++ b/Spring-JMS/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.main.web-application-type=none
 ibm.mq.queueManager=QM1  
 ibm.mq.channel=DEV.APP.SVRCONN
 ibm.mq.connName=localhost(1414)
-#Uncomment the below lines when connecting to MQ on Cloud
+#Uncomment the below lines when connecting to MQ using TLS
 #ibm.mq.sslCipherSuite=TLSv1.2
 #ibm.mq.sslCipherSpec=ANY_TLS12_OR_HIGHER
 #ibm.mq.jks.clientStore=classpath:keystore/yourClientTrustStoreName.p12
@@ -64,7 +64,7 @@ my.app.admin.host=localhost
 my.app.admin.port=1414
 my.app.admin.user=admin
 my.app.admin.password=passw0rd
-#Uncomment the below lines when connecting to MQ on Cloud
+#Uncomment the below lines when connecting to MQ using TLS
 #my.app.admin.sslCipherSpec=*TLS12ORHIGHER
 #my.app.admin.clientTruststore=classpath:keystore/yourClientTrustStoreName.p12
 
