Cleaned docker files

--- a/ibm-messaging-mq-cloud-showcase-app/frontend/AWS-MQ-showcase/package.json
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/AWS-MQ-showcase/package.json
@@ -12,14 +12,14 @@
     "format": "prettier --write \"**/*.{js,md,scss}\"",
     "format:diff": "prettier --list-different \"**/*.{js,md,scss}\"",
     "format:staged": "prettier --write",
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@carbon/charts": "1.5.7",
-    "@carbon/charts-react": "1.5.7",
-    "@carbon/ibm-cloud-cognitive-cdai": "1.22.21",
-    "@carbon/react": "1.1.0",
+    "@carbon/charts": "1.15.3",
+    "@carbon/charts-react": "1.15.3",
+    "@carbon/ibm-cloud-cognitive-cdai": "1.24.12",
+    "@carbon/react": "1.53.0",
     "dom-to-image-more": "3.1.4",    
     "axios": "1.6.0",
     "d3": "7.6.1",        
