--- a/ibm-messaging-mq-cloud-showcase-app/frontend/Dockerfile
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/Dockerfile
@@ -1,5 +1,5 @@
 
-#  Copyright 2022, 2023 IBM Corp.
+#  Copyright 2022, 2023, 2024 IBM Corp.
 #  Licensed under the Apache License, Version 2.0 (the 'License');
 #  you may not use this file except in compliance with the License.
 #  You may obtain a copy of the License at
@@ -12,8 +12,15 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+# This Dockerfile has two separate stages.
+#The first stage is builds the Node program.
+# The second stage is a runtime-only container that holds just the things we need to
+# execute the compiled program.
 
-FROM node:16-slim as frontend
+###########################################################
+# This starts the BUILD phase
+###########################################################
+FROM node:18-slim as builder
 ENV APP_DIR /usr/local
 WORKDIR ${APP_DIR}
 RUN apt-get update \
@@ -21,10 +28,28 @@ RUN apt-get update \
    && apt-get install -y git
 ENV APP_DIR /usr/local/
 WORKDIR ${APP_DIR}
+
+#get the application
 COPY ./AWS-MQ-showcase/ ./
-#run the application
+
+#install packages for the application
 RUN yarn install
 
-EXPOSE 3000
+#Build the application
+RUN yarn run build
 
-CMD yarn start
+###########################################################
+# This starts the RUNTIME phase
+###########################################################
+# Now that there is a container with the compiled program we can have a smaller
+# runtime image.
+FROM nginx:stable-alpine3.17-slim as frontendImage
+
+#Set nginx configuration as per application requirements
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+#Copy over only the built code to the default nginx location
+COPY --from=builder /usr/local/build /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx","-g","daemon off;"]
