--- a/ibm-messaging-mq-cloud-showcase-app/docker-compose.yaml
+++ b/ibm-messaging-mq-cloud-showcase-app/docker-compose.yaml
@@ -1,4 +1,4 @@
-#  Copyright 2022, 2023 IBM Corp.
+#  Copyright 2022, 2023, 2024 IBM Corp.
 #  Licensed under the Apache License, Version 2.0 (the 'License');
 #  you may not use this file except in compliance with the License.
 #  You may obtain a copy of the License at
@@ -19,7 +19,7 @@ services:
         - com.ibm.mq.app=mqapp
     image: frontend:0.1    
     ports:
-      - 3000:3000    
+      - 3000:80    
     networks:
       - app-pubic-network      
     depends_on:
