--- a/ibm-messaging-mq-cloud-showcase-app/backend/Dockerfile
+++ b/ibm-messaging-mq-cloud-showcase-app/backend/Dockerfile
@@ -1,5 +1,4 @@
-
-#  Copyright 2022, 2023 , 2024 IBM Corp.
+#  Copyright 2022 , 2024 IBM Corp.
 #  Licensed under the Apache License, Version 2.0 (the 'License');
 #  you may not use this file except in compliance with the License.
 #  You may obtain a copy of the License at
@@ -20,8 +19,7 @@
 ###########################################################
 # This starts the BUILD phase
 ###########################################################
-FROM node:latest as builder
-
+FROM node:20.9.0 as builder
 # ENV NODE_VERSION 18
 
 #get the application
