--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -11,6 +11,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+
 server {
     listen       80;
     listen  [::]:80;
@@ -26,7 +27,7 @@ server {
 
     #Set up reverse proxy to redirect requests to backend
     location /api/ {
-        proxy_pass http://be:8080/api/;
+        proxy_pass http://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/;
     }
 
     #error_page  404              /404.html;
