modify Dockerfile to remove warning message

--- a/ibm-messaging-mq-cloud-showcase-app/backend/Dockerfile
+++ b/ibm-messaging-mq-cloud-showcase-app/backend/Dockerfile
@@ -35,7 +35,7 @@ ENV APP_DIR /usr/local/AWS-showcase-backend/
 WORKDIR ${APP_DIR}
 
 #install packages for the application
-RUN npm install --only=prod \   
+RUN npm install --omit=dev \   
     && chmod a+rx ${APP_DIR}/*
 
 #Cleaning
