Remove npm update as was causing errors downstream

--- a/ibm-messaging-mq-cloud-showcase-app/backend/Dockerfile
+++ b/ibm-messaging-mq-cloud-showcase-app/backend/Dockerfile
@@ -27,6 +27,7 @@ ENV APP_DIR /usr/local
 WORKDIR ${APP_DIR}
 
 # Update npm to latest version
+# Removed as was causing "Class extends ..." error
 # RUN npm install -g npm
 
 # Copy project files into the container
@@ -34,7 +35,6 @@ COPY ./AWS-showcase-backend ./AWS-showcase-backend
 ENV APP_DIR /usr/local/AWS-showcase-backend/
 WORKDIR ${APP_DIR}
 
-# Force clean the cache, to prevent "Class extends value undefined ... " error  
 # Install packages for the application
 RUN npm install --omit=dev \   
     && chmod a+rx ${APP_DIR}/*
