Allow BE to be slow in starting

--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -13,7 +13,7 @@
 
 upstream backend {
     server $REACT_APP_BE_HOST;
-    server $REACT_APP_BE_HOST max_fails=0 slow_start=120s;
+    server $REACT_APP_BE_HOST max_fails=0;
 }
 
 server {
