Allow BE to be slow in starting

--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -12,7 +12,7 @@
 #  limitations under the License.
 
 
-upstream $REACT_APP_BE_HOST {
+upstream $REACT_APP_BE_HOST:$REACT_APP_BE_PORT {
     server $REACT_APP_BE_HOST;
     server $REACT_APP_BE_HOST max_fails=0;
 }
