--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -12,9 +12,9 @@
 #  limitations under the License.
 
 
-upstream $REACT_APP_BE_HOST:$REACT_APP_BE_PORT {
-    server $REACT_APP_BE_HOST;
-    server $REACT_APP_BE_HOST max_fails=0;
+upstream $REACT_APP_BE_HOST {
+    server $REACT_APP_BE_HOST:$REACT_APP_BE_PORT;
+    server $REACT_APP_BE_HOST:$REACT_APP_BE_PORT max_fails=0;
 }
 
 server {
