Allow BE to be slow in starting

--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -31,11 +31,11 @@ server {
     }
 
     #Set up reverse proxy to redirect requests to backend
-    location /api/ {
-        proxy_pass https://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/;
-        proxy_read_timeout 5m;
-        proxy_ssl_verify off;
-    }
+    #location /api/ {
+    #    proxy_pass https://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/;
+    #    proxy_read_timeout 5m;
+    #    proxy_ssl_verify off;
+    #}
 
     #error_page  404              /404.html;
 
